Rename folder "pages" to "views"

--- a/app/index.html
+++ b/app/index.html
@@ -47,18 +47,18 @@
         <script src="app.directive.js"></script>
 
         <!-- Controller -->
-        <script src="pages/app-login/app-login.controller.js"></script>
-        <script src="pages/app-signup/app-signup.controller.js"></script>
-        <script src="pages/app-info/app-info.controller.js"></script>
-        <script src="pages/app-doing/app-doing.controller.js"></script>
-        <script src="pages/app-summary/app-summary.controller.js"></script>
-        <script src="pages/app-quizzes/quizzesController.js"></script>
-        <script src="pages/app-test/testController.js"></script>
+        <script src="views/app-login/app-login.controller.js"></script>
+        <script src="views/app-signup/app-signup.controller.js"></script>
+        <script src="views/app-info/app-info.controller.js"></script>
+        <script src="views/app-doing/app-doing.controller.js"></script>
+        <script src="views/app-summary/app-summary.controller.js"></script>
+        <script src="views/app-quizzes/quizzesController.js"></script>
+        <script src="views/app-test/testController.js"></script>
 
         <!-- Service -->
         <script src="services/session.service.js"></script>
-        <script src="pages/app-doing/submission-factory.js"></script>
-        <script src="pages/app-doing/complete-factory.js"></script>
+        <script src="views/app-doing/submission-factory.js"></script>
+        <script src="views/app-doing/complete-factory.js"></script>
         <script src="services/Notifier.service.js"></script>
 
         <!-- Component -->
