--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
         />
 
         <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="assets/style/form-floating.css" />
         <link rel="stylesheet" href="assets/libs/wowjs/css/libs/animate.css" />
-
+        
+        <link rel="stylesheet" href="assets/style/form-floating.css" />
         <link rel="stylesheet" href="assets/style/GlobalStyle.css" />
         <link rel="stylesheet" href="assets/style/HeaderBanner.css" />
         <link rel="stylesheet" href="assets/style/Footer/Footer.css" />
@@ -47,18 +47,17 @@
         <script src="app.directive.js"></script>
 
         <!-- Controller -->
-        <script src="views/app-login/app-login.controller.js"></script>
-        <script src="views/app-signup/app-signup.controller.js"></script>
-        <script src="views/app-info/app-info.controller.js"></script>
-        <script src="views/app-doing/app-doing.controller.js"></script>
-        <script src="views/app-summary/app-summary.controller.js"></script>
-        <script src="views/app-quizzes/quizzesController.js"></script>
-        <script src="views/app-test/testController.js"></script>
+        <script src="controllers/app-login.controller.js"></script>
+        <script src="controllers/app-signup.controller.js"></script>
+        <script src="controllers/app-info.controller.js"></script>
+        <script src="controllers/app-doing.controller.js"></script>
+        <script src="controllers/app-summary.controller.js"></script>
+        <script src="controllers/quizzesController.js"></script>
 
         <!-- Service -->
         <script src="services/session.service.js"></script>
-        <script src="views/app-doing/submission-factory.js"></script>
-        <script src="views/app-doing/complete-factory.js"></script>
+        <script src="services/submission.service.js"></script>
+        <script src="services/complete.service.js"></script>
         <script src="services/Notifier.service.js"></script>
 
         <!-- Component -->
