create update info function

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,8 @@
         <script src="directive/logger.directive.js"></script>
         <script src="directive/modal-body-target.directive.js"></script>
         <script src="directive/model-id-target.directive.js"></script>
-        
+        <script src="directive/check-image.directive.js"></script>
+
         <!-- Controller -->
         <script src="controllers/app-login.controller.js"></script>
         <script src="controllers/app-signup.controller.js"></script>
@@ -62,12 +63,14 @@
         <script src="controllers/app-doing.controller.js"></script>
         <script src="controllers/app-summary.controller.js"></script>
         <script src="controllers/quizzesController.js"></script>
+        <!-- <script src="controllers/changeInfo.controller.js"></script> -->
 
         <!-- Service -->
         <script src="services/session.service.js"></script>
         <script src="services/submission.service.js"></script>
         <script src="services/complete.service.js"></script>
-        <script src="services/Notifier.service.js"></script>
+        <script src="services/notifier.service.js"></script>
+        <script src="services/users.service.js"></script>
 
         <!-- Component -->
         <script src="components/app-loading/app-loading.component.js"></script>
